maintemplate/server/deployments/minio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: minio
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
      - minio.getcouragenow.org
      secretName: minio-tls
  rules:  
  - http:
      paths:
      - backend:
          serviceName: minio-hl-svc
          servicePort: 9000
    host: minio.getcouragenow.org
